WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
239942
[GStreamer][Debug] media-recorder tests hitting an ASSERT
https://bugs.webkit.org/show_bug.cgi?id=239942
Summary
[GStreamer][Debug] media-recorder tests hitting an ASSERT
Philippe Normand
Reported
2022-05-01 06:01:04 PDT
Thread 1 (Thread 0x7f7cc17fa640 (LWP 46093)): #0 WTFCrash() () at /app/webkit/Source/WTF/wtf/Assertions.cpp:322 #1 0x00007f7e39393be6 in WTFCrashWithInfo(int, char const*, char const*, int) () at /app/webkit/WebKitBuild/Debug/WTF/Headers/wtf/Assertions.h:748 #2 0x00007f7e406de452 in WebCore::RealtimeMediaSource::removeAudioSampleObserver(WebCore::RealtimeMediaSource::AudioSampleObserver&) (this=0x7f7d44186500, observer=...) at /app/webkit/Source/WebCore/platform/mediastream/RealtimeMediaSource.cpp:73 #3 0x00007f7e3cbe6c43 in InternalSource::stopObserving() (this=0x7f7cde096900) at /app/webkit/Source/WebCore/platform/mediastream/gstreamer/GStreamerMediaStreamSource.cpp:197 #4 0x00007f7e3cbe30ed in webkitMediaStreamSrcChangeState(GstElement*, GstStateChange) (element=0x5626fb816770 [WebKitMediaStreamSrc|webkitmediastreamsrc6], transition=GST_STATE_CHANGE_PAUSED_TO_READY) at /app/webkit/Source/WebCore/platform/mediastream/gstreamer/GStreamerMediaStreamSource.cpp:539 #5 0x00007f7e2fb97922 in gst_element_change_state (element=element@entry=0x5626fb816770 [WebKitMediaStreamSrc|webkitmediastreamsrc6], transition=transition@entry=GST_STATE_CHANGE_PAUSED_TO_READY) at ../gst/gstelement.c:3083 #6 0x00007f7e2fb98065 in gst_element_set_state_func (element=0x5626fb816770 [WebKitMediaStreamSrc|webkitmediastreamsrc6], state=GST_STATE_READY) at ../gst/gstelement.c:3037 #7 0x00007f7e2fb73eec in gst_bin_element_set_state (next=GST_STATE_READY, current=GST_STATE_PAUSED, start_time=0 [0:00:00.000000000], base_time=11596110641054559 [3221:08:30.641054559], element=0x5626fb816770 [WebKitMediaStreamSrc|webkitmediastreamsrc6], bin=0x5626fb826550 [GstURISourceBin|urisourcebin6]) at ../gst/gstbin.c:2581 #8 gst_bin_change_state_func (element=0x5626fb826550 [GstURISourceBin|urisourcebin6], transition=GST_STATE_CHANGE_PAUSED_TO_READY) at ../gst/gstbin.c:2923 #9 0x00007f7de817469f in gst_uri_source_bin_change_state (element=0x5626fb826550 [GstURISourceBin|urisourcebin6], transition=GST_STATE_CHANGE_PAUSED_TO_READY) at ../gst/playback/gsturisourcebin.c:2931 #10 0x00007f7e2fb97922 in gst_element_change_state (element=element@entry=0x5626fb826550 [GstURISourceBin|urisourcebin6], transition=transition@entry=GST_STATE_CHANGE_PAUSED_TO_READY) at ../gst/gstelement.c:3083 #11 0x00007f7e2fb98065 in gst_element_set_state_func (element=0x5626fb826550 [GstURISourceBin|urisourcebin6], state=GST_STATE_READY) at ../gst/gstelement.c:3037 #12 0x00007f7e2fb73eec in gst_bin_element_set_state (next=GST_STATE_READY, current=GST_STATE_PAUSED, start_time=0 [0:00:00.000000000], base_time=11596110641054559 [3221:08:30.641054559], element=0x5626fb826550 [GstURISourceBin|urisourcebin6], bin=0x5626fb89a070 [GstUriTranscodeBin|uritranscodebin]) at ../gst/gstbin.c:2581 #13 gst_bin_change_state_func (element=0x5626fb89a070 [GstUriTranscodeBin|uritranscodebin], transition=GST_STATE_CHANGE_PAUSED_TO_READY) at ../gst/gstbin.c:2923 #14 0x00007f7e2fbc223e in gst_pipeline_change_state (element=0x5626fb89a070 [GstUriTranscodeBin|uritranscodebin], transition=GST_STATE_CHANGE_PAUSED_TO_READY) at ../gst/gstpipeline.c:529 #15 0x00007f7de81e6e8e in gst_uri_transcode_bin_change_state (element=0x5626fb89a070 [GstUriTranscodeBin|uritranscodebin], transition=GST_STATE_CHANGE_PAUSED_TO_READY) at ../gst/transcode/gsturitranscodebin.c:466 #16 0x00007f7e2fb97922 in gst_element_change_state (element=element@entry=0x5626fb89a070 [GstUriTranscodeBin|uritranscodebin], transition=GST_STATE_CHANGE_PAUSED_TO_READY) at ../gst/gstelement.c:3083 #17 0x00007f7e2fb9839a in gst_element_continue_state (element=element@entry=0x5626fb89a070 [GstUriTranscodeBin|uritranscodebin], ret=ret@entry=GST_STATE_CHANGE_NO_PREROLL) at ../gst/gstelement.c:2791 #18 0x00007f7e2fb97a25 in gst_element_change_state (element=element@entry=0x5626fb89a070 [GstUriTranscodeBin|uritranscodebin], transition=transition@entry=GST_STATE_CHANGE_PLAYING_TO_PAUSED) at ../gst/gstelement.c:3129 #19 0x00007f7e2fb98065 in gst_element_set_state_func (element=0x5626fb89a070 [GstUriTranscodeBin|uritranscodebin], state=GST_STATE_NULL) at ../gst/gstelement.c:3037 #20 0x00007f7e2cc5f3bb in gst_transcoder_main (data=<optimized out>) at ../gst-libs/gst/transcoder/gsttranscoder.c:842 #21 0x00007f7e2fdf9351 in g_thread_proxy (data=0x7f7ccc0018c0) at ../glib/gthread.c:827 #22 0x00007f7e2d3cc3ba in start_thread (arg=0x7f7cc17fa640) at pthread_create.c:481 #23 0x00007f7e2f6c3b03 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95 STDERR: ASSERTION FAILED: isMainThread() STDERR: /app/webkit/Source/WebCore/platform/mediastream/RealtimeMediaSource.cpp(73) : void WebCore::RealtimeMediaSource::removeAudioSampleObserver(WebCore::RealtimeMediaSource::AudioSampleObserver&)
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2022-05-01 06:06:05 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/450
EWS
Comment 2
2022-05-02 03:57:14 PDT
Committed
r293661
(
250165@main
): <
https://commits.webkit.org/250165@main
> Reviewed commits have been landed. Closing PR #450 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-05-02 03:58:14 PDT
<
rdar://problem/92600078
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug