[GStreamer][Debug] media-recorder tests hitting an ASSERT https://bugs.webkit.org/show_bug.cgi?id=239942

Patch by Philippe Normand <pnormand@igalia.com> on 2022-05-02
Reviewed by Xabier Rodriguez-Calvar.

Delay the track observing stopping until InternalSources are destroyed. Doing so during
PAUSED->READY was not safe in MediaRecording pipelines, because the transcoder changes its
state from a secondary thread.

* platform/mediastream/gstreamer/GStreamerMediaStreamSource.cpp:
(webkitMediaStreamSrcChangeState):

Canonical link: https://commits.webkit.org/250165@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293661 268f45cc-cd09-0410-ab3c-d52691b4dbfc